--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
+ext{
+    nav_version = "2.5.0"
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
